experiments with build..

--- a/src/components/markdown-it-plugins/markdown-rendering.sass
+++ b/src/components/markdown-it-plugins/markdown-rendering.sass
@@ -49,3 +49,6 @@
 //        top: 1rem
 //        text-shadow: 0 0 2px black, 0 0 5px black, 0 0 10px black, 0 0 10px black, 0 0 10px black, 0 0 10px black, 0 0 10px black, 0 0 10px black
 //.body--light .my-card .my-markdown h1:nth-child(1)
+
+.visually-hidden
+    display: none
